Bug 911455 - Unrestricted the session secret in Openshift Origin server

--- a/broker/conf/broker.conf
+++ b/broker/conf/broker.conf
@@ -39,3 +39,10 @@ AUTH_PRIVKEYFILE="/etc/openshift/server_priv.pem"
 AUTH_PRIVKEYPASS=""
 AUTH_PUBKEYFILE="/etc/openshift/server_pub.pem"
 AUTH_RSYNC_KEY_FILE="/etc/openshift/rsync_id_rsa"
+
+# This session must be shared amongst all Brokers but otherwise secret.  If
+# this value is changed sessions will be dropped.  This value is used for
+# setting the rails secret_token (or the secret_key_base for Rails 4.0).
+# "openssl rand -hex 64" can be use to generate a unique value.
+#
+# SESSION_SECRET=
