--- a/openshift-console/etc/openshift/console.conf
+++ b/openshift-console/etc/openshift/console.conf
@@ -103,3 +103,10 @@ REMOTE_USER_HEADER=REMOTE_USER
 # Required when CONSOLE_SECURITY=remote_user, may be empty
 #
 REMOTE_USER_COPY_HEADERS=X-Remote-User
+
+# This value must be shared amongst all Consoles but otherwise secret.  This
+# value is used for setting the rails secret_token (or the secret_key_base for
+# Rails 4.0).  "openssl rand -hex 64" can be use to generate a unique value.
+#
+# If this value is changed all active sessions will be dropped.
+# SESSION_SECRET=
