Updating releasers.conf for recent brew changes
http://post-office.corp.redhat.com/archives/libra-onpremise-devel/2013-March/msg00380.html

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -2,9 +2,13 @@
 releaser = tito.release.DistGitReleaser
 branches = libra-rhel-6.3
 
-[ose-1.1]
+[ose-1.2]
 releaser = tito.release.DistGitReleaser
 branches = devops-1-rhel-6
+
+[ose-1.1]
+releaser = tito.release.DistGitReleaser
+branches = devops-1.1-rhel-6
 
 [ose-1.0]
 releaser = tito.release.DistGitReleaser
